--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -59,7 +59,7 @@
                 <artifactItem>
                   <groupId>org.apache.myfaces.shared</groupId>
                   <artifactId>myfaces-shared-impl</artifactId>
-                  <version>2.0.6-SNAPSHOT</version>
+                  <version>${myfaces-shared.version}</version>
                 </artifactItem>
               </artifactItems>
               <outputDirectory>${project.build.directory}/classes</outputDirectory>
@@ -77,7 +77,7 @@
                     <artifactItem>
                         <groupId>org.apache.myfaces.shared</groupId>
                         <artifactId>myfaces-shared-impl</artifactId>
-                        <version>2.0.6-SNAPSHOT</version>
+                        <version>${myfaces-shared.version}</version>
                         <classifier>sources</classifier>
                     </artifactItem>
                 </artifactItems>
@@ -295,7 +295,7 @@
     <dependency>
       <groupId>org.apache.myfaces.shared</groupId>
       <artifactId>myfaces-shared-impl</artifactId>
-      <version>2.0.6-SNAPSHOT</version>
+      <version>${myfaces-shared.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -351,4 +351,9 @@
       </plugin>
     </plugins>
   </reporting>
+
+  <properties>
+    <myfaces-shared.version>2.0.7-SNAPSHOT</myfaces-shared.version>
+  </properties>
+
 </project>
